--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,16 +1,10 @@
+<input type="text" placeholder="Buscar amigo" [(ngModel)]="query" />
+<br />
 <b>Amigos:</b>
-<ng-container *ngFor="let user of friends; let i = index">
-	<p *ngIf="user.friend">
+<ng-container *ngFor="let user of friends | search: query; let i = index">
+	<p>
 		<a routerLink="/conversation/{{ user.uid }}">
 			{{i + 1}}. {{user.nick}} - {{user.email}}
-		</a>
-	</p>
-</ng-container>
-<b>No agregados:</b>
-<ng-container *ngFor="let user of friends; let i = index">
-	<p *ngIf="!user.friend">
-		<a >
-			{{i + 1}}. {{user.nick}} - {{user.email}}	
 		</a>
 	</p>
 </ng-container>
