--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -1,3 +1,34 @@
 #brand {
-	width: 60px;
+	width: 40px;
+	padding: 5px !important;
+	border-top: none !important;
+	border-right: none !important;
 }
+
+#menuContainer {
+	background: #8dd2f3;
+
+	background: -webkit-linear-gradient(top, #add2f3 0%, #43b5eb 50%, #39abe1 51%, #3cb2ea 100%);
+	   background: -moz-linear-gradient(top, #8dd2f3 0%, #43b5eb 50%, #39abe1 51%, #3cb2ea 100%);
+		background: -ms-linear-gradient(top, #8dd2f3 0%, #43b5eb 50%, #39abe1 51%, #3cb2ea 100%);
+		 background: -o-linear-gradient(top, #8dd2f3 0%, #43b5eb 50%, #39abe1 51%, #3cb2ea 100%);
+			background: linear-gradient(to bottom, #8dd2f3 0%, #43b5eb 50%, #39abe1 51%, #3cb2ea 100%);
+	
+	-ms-filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8dd2f3', endColorstr='#3cb2ea', GradientType=0);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#8dd2f3', endColorstr='#3cb2ea', GradientType=0);
+	
+	-webkit-box-shadow: 0px 15px 15px -4px rgba(0, 0, 0, 0.24);
+	   -moz-box-shadow: 0px 15px 15px -4px rgba(0, 0, 0, 0.24);
+			box-shadow: 0px 15px 15px -4px rgba(0, 0, 0, 0.24);
+
+	height: 56px;
+}
+
+#menuContainer > .navbar-brand,
+#menuContainer > ul.navbar-nav > li.nav-item > a {
+	color: white !important;
+	cursor: default !important;
+	border-radius: 1px solid white !important;
+	display: inline-block !important;
+}
+
