--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,40 @@
 /* You can add global styles to this file, and also import other style files */
+.avatarFrameOffline {
+	background: -webkit-gradient(left top, right top, color-stop(0%, rgba(235,233,249,1)), color-stop(50%, rgba(216,208,239,1)), color-stop(51%, rgba(206,199,236,1)), color-stop(100%, rgba(193,191,234,1)));
+
+	background: -webkit-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(216,208,239,1) 50%, rgba(206,199,236,1) 51%, rgba(193,191,234,1) 100%);
+	   background: -moz-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(216,208,239,1) 50%, rgba(206,199,236,1) 51%, rgba(193,191,234,1) 100%);
+		background: -ms-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(216,208,239,1) 50%, rgba(206,199,236,1) 51%, rgba(193,191,234,1) 100%);
+		 background: -o-linear-gradient(left, rgba(235,233,249,1) 0%, rgba(216,208,239,1) 50%, rgba(206,199,236,1) 51%, rgba(193,191,234,1) 100%);
+			background: linear-gradient(to right, rgba(235,233,249,1) 0%, rgba(216,208,239,1) 50%, rgba(206,199,236,1) 51%, rgba(193,191,234,1) 100%);
+
+	background: rgba(235,233,249,1);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ebe9f9', endColorstr='#c1bfea', GradientType=1 );
+	text-align: center;
+	padding: 5%;
+	margin: 5%;
+	border-radius: 10px;
+	border: 1px solid white;
+	display: inline-block;
+}
+
+.avatarFrameOnLine {
+  background: #d2ff6b;
+  background: -moz-linear-gradient(top, #d2ff6b 0%, #81ff3d 50%, #0cff00 51%, #0dbc03 100%);
+  background: -webkit-linear-gradient(top, #d2ff6b 0%, #81ff3d 50%, #0cff00 51%, #0dbc03 100%);
+  background: linear-gradient(to bottom, #d2ff6b 0%, #81ff3d 50%, #0cff00 51%, #0dbc03 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#d2ff6b', endColorstr='#0dbc03', GradientType=0);
+  text-align: center;
+  padding: 5%;
+  margin: 5%;
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.36);
+  -webkit-box-shadow: 3px 3px 21px 1px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 3px 3px 21px 1px rgba(0, 0, 0, 0.75);
+  box-shadow: 3px 3px 21px 1px rgba(0, 0, 0, 0.75);
+  display: inline-block;
+}
+
+#homeAvatarPicture {
+	max-height: 100px;
+}
