Authentication guard implemented

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -12,6 +12,8 @@
 					<span>Online</span>
 					<br>
 					<span>< Escribe un mensaje Personal></span>
+          <br />
+          <button (click)="logOut()">Cerrar sesión</button>
 				</div>
 			</div>
 		</div>
