--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,17 +1,17 @@
 <div id="homeContainer">
 	<div class="homeHeadContainer">
-		<div class="row">
+		<div class="row" *ngIf="user">
 			<div class="col-md-auto">
 					<div class="avatarFrameOnLine">
 						<img src="assets/img/generic_avatar.png" alt="" id="homeAvatarPicture">
 					</div>
 			</div>
 			<div class="col">
-				<b>Eduardo</b>
+				<b>{{ user.nick }}</b>
 				<div>
-					<span>Online</span>
+					<span>{{ user.status }}</span>
 					<br>
-					<span>< Escribe un mensaje Personal></span>
+					<span>{{ user.subnick }}</span>
           <br />
           <button (click)="logOut()">Cerrar sesión</button>
 				</div>
