--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -2,19 +2,29 @@
   <div class="container pt-45">
     <div class="row">
       <div class="col-md-3">
-        <div class="avatarFrameOnLine">
-          <img src="assets/img/generic_avatar.png" alt="" class="avatarImage img-fluid">
+        <div class="avatarFrameOnLine" *ngIf="user">
+          <img [src]=" croppedImage || user.avatar || 'assets/img/generic_avatar.png' " alt="" class="avatarImage img-fluid">
         </div>
         <hr />
         <div>
           <span>Cambiar Foto</span><br />
-          <label for="" class="custom-file-upload">
-            <input type="file">
+          <label for="">
+            <input type="file" (change)="fileChangeEvent($event)" />
             Subir Avatar
           </label>
         </div>
       </div>
       <div class="col-md-9" *ngIf="user">
+        <image-cropper
+            [imageChangedEvent]="imageChangedEvent"
+            [maintainAspectRatio]="true"
+            [aspectRatio]="1 / 1"
+            [resizeToWidth]="128"
+            format="png"
+            (imageCropped)="imageCropped($event)"
+            (imageLoaded)="imageLoaded()"
+            (loadImageFailed)="loadImageFailed()"
+        ></image-cropper>
         <div id="nick">
           <label fixed>Nick</label>
           <input [(ngModel)]="user.nick" type="text" class="form-control" />
