Send and receive friend requests implemented

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -25,18 +25,33 @@
         class="form-control" />
       </div>
       <div class="col-md-auto">
-        <img src="assets/img/logo_live_add.png" alt="" class="icon">
+        <img (click)="open(content)" src="assets/img/logo_live_add.png" alt="" class="icon">
       </div>
     </div>
     <hr />
     <p *ngIf="friends"><b>Amigos: ({{friends.length}} / {{friends.length}})</b></p>
-    <p *ngFor="let user of friends | search: query; let i = index" class="user">
-      <img src="assets/img/logo_live_{{ user.status }}.png" alt="Contact status" class="icon">
-      <span routerLink="/conversation/{{ user.uid }}">
-        <b>{{ user.nick }}</b> - {{ user.subnick || 'No subnick' }}
-        <small>{{ user.email }}</small>
+    <p *ngFor="let friend of friends | search: query; let i = index" class="user">
+      <img src="assets/img/logo_live_{{ friend.status }}.png" alt="Contact status" class="icon">
+      <span routerLink="/conversation/{{ friend.uid }}">
+        <b>{{ friend.nick }}</b> - {{ friend.subnick || 'No subnick' }}
+        <small>{{ friend.email }}</small>
       </span>
     </p>
   </div>
-
 </div>
+
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Agregar amigo</h4>
+    <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <b>Ingresa el email de tu amigo</b>
+    <input type="email" class="form-control" placeholder="email" [(ngModel)]="friendEmail" (keyup.enter)="sendRequest()">
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="sendRequest()">Guardar</button>
+  </div>
+</ng-template>
